<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">androidproject</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <!--TODO ENTER YOUR APP ID BELOW-->
    <string name="facebook_app_id" />
    <!--TODO ENTER YOUR APP ID BELOW (eg: fb0123456789)-->
    <string name="fb_login_protocol_scheme">fb</string>
    <!--TODO ENTER YOUR Client Token BELOW-->
    <string name="facebook_client_token" />
    <string name="lbl_continue">CONTINUE</string>
    <string name="msg_aug_12_2022_at">Aug 12, 2022 at 12:08 PM</string>
    <string name="lbl_credit_card">Credit card</string>
    <string name="lbl_diabetic_diet">Diabetic Diet</string>
    <string name="lbl_next">Next</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account? Sign Up</string>
    <string name="lbl_67">67%</string>
    <string name="lbl_rater">Rater</string>
    <string name="lbl_mentos">Mentos</string>
    <string name="lbl_shipping">Shipping</string>
    <string name="lbl_home">Home</string>
    <string name="msg_create_your_acc">Create your account</string>
    <string name="lbl_400_d">400 D</string>
    <string name="lbl_description">Description...</string>
    <string name="msg_already_have_ac">Already have account?  Login</string>
    <string name="msg_1001_foulen_str">1001 Foulen Street</string>
    <string name="msg_vitamins_medic">Vitamins
Medicines</string>
    <string name="lbl_dental">Dental</string>
    <string name="msg_rating_and_revi">Rating and Reviews</string>
    <string name="msg_view_and_buy_me">View and buy Medicine online</string>
    <string name="msg_do_you_want_som">Do you want some help with your health to get better life?</string>
    <string name="msg_you_can_track">. You can track the delivery in the order section.</string>
    <string name="lbl_pay_on_delivery">Pay on delivery</string>
    <string name="lbl_clear_all">Clear all</string>
    <string name="lbl_15_off">15% OFF</string>
    <string name="lbl_forgot">Forgot?</string>
    <string name="lbl_15_80">-$15.80</string>
    <string name="lbl_pay_now_185_00">Pay Now $185.00</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_coupon_discount">Coupon Discount</string>
    <string name="lbl_all_products">All Products</string>
    <string name="msg_save_extra_on">Save extra on
every order</string>
    <string name="lbl_go_to_cart">Go to Cart</string>
    <string name="msg_1_coupon_applie">1 Coupon applied</string>
    <string name="lbl_forgot2">Forgot</string>
    <string name="lbl_whoops">Whoops</string>
    <string name="lbl_your_cart">Your cart</string>
    <string name="lbl_110_packages">110 Packages</string>
    <string name="lbl_mc_pharma">mc PHARMA</string>
    <string name="lbl_9ds69hs">#9ds69hs</string>
    <string name="msg_continue_with_f">Continue with facebook</string>
    <string name="lbl_try_again">Try again</string>
    <string name="msg_place_order_1">Place Order  $185.00</string>
    <string name="lbl_oppi">OPPI</string>
    <string name="msg_enter_the_verif">Enter the verify code</string>
    <string name="lbl_top_categories">Top Categories</string>
    <string name="lbl_payment_summary">Payment Summary</string>
    <string name="msg_continue_with_g">Continue with Gmail</string>
    <string name="lbl_order_total">Order Total</string>
    <string name="lbl_welcome_to_oppi">Welcome to OPPI</string>
    <string name="lbl_wellness">Wellness</string>
    <string name="lbl_resend_code">Resend Code</string>
    <string name="lbl_teriak">TERIAK</string>
    <string name="lbl_200_d">200 D</string>
    <string name="lbl_my_orders">My orders</string>
    <string name="lbl_password">Password</string>
    <string name="msg_search_medicine">Search Medicine &amp; Healthcare products</string>
    <string name="lbl_skin_hair">Skin &amp; Hair</string>
    <string name="lbl_faq">Faq</string>
    <string name="lbl_my_profile">My Profile</string>
    <string name="lbl_my_consults">My Consults</string>
    <string name="lbl_submit_code">SUBMIT CODE</string>
    <string name="lbl_eye_care">Eye care</string>
    <string name="lbl_228_80">$228.80</string>
    <string name="lbl_free">Free</string>
    <string name="lbl_thank_you">Thank you</string>
    <string name="lbl_florident">Florident</string>
    <string name="lbl_24_oct_2022">24- oct 2022</string>
    <string name="lbl_20">20%</string>
    <string name="msg_phone_number_ve">Phone Number Verified</string>
    <string name="lbl_billing">Billing</string>
    <string name="lbl_items_discount">Items Discount</string>
    <string name="lbl_22">2%</string>
    <string name="msg_juices_vineg">Juices &amp;
Vinegars</string>
    <string name="lbl_25">$25</string>
    <string name="lbl_featured_brands">Featured Brands</string>
    <string name="msg_with_this_in_mi">With this in mind, Global Online Academy created the Blended Learning Design </string>
    <string name="msg_your_order_will">Your Order will be delivered with invoice #9ds69hs. You can track the delivery in the order section.</string>
    <string name="lbl_10_d">10 D</string>
    <string name="lbl_package_size">Package size</string>
    <string name="msg_delivery_addres">Delivery Address</string>
    <string name="lbl_continue_order">Continue Order</string>
    <string name="msg_panadol_500mg_1">Panadol 500mg
16 Comprimes</string>
    <string name="lbl_4_4">4.4</string>
    <string name="lbl_homeo">Homeo</string>
    <string name="msg_your_cart_is_em">Your cart is empty!</string>
    <string name="lbl_create_account">CREATE ACCOUNT</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_login2">LOGIN</string>
    <string name="lbl_4_2">4.2</string>
    <string name="msg_bottle_of_50_pe">bottle of 50 pellets</string>
    <string name="lbl_add_address">Add Address</string>
    <string name="lbl_description2">Description... </string>
    <string name="lbl_add_more">Add more</string>
    <string name="msg_923_ratings_and">923 Ratings
and 257 Reviews</string>
    <string name="lbl_office">Office</string>
    <string name="lbl_18">$18</string>
    <string name="lbl_skip">Skip</string>
    <string name="msg_gripex_adulte_1">GRIPEX Adulte
12 Sachets</string>
    <string name="lbl">\?</string>
    <string name="lbl_diabetes_care">Diabetes Care</string>
    <string name="lbl_product_details">Product Details</string>
    <string name="msg_congratulations">Congratulations, your phone number has been verified. You can start using the app</string>
    <string name="msg_sugar_substitu">Sugar
Substitute</string>
    <string name="msg_we_just_send_yo">We just send you a verification code via phone
+216 12345678</string>
    <string name="msg_get_delivery_on">Get Delivery on time</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_google_pay">Google pay</string>
    <string name="lbl_0">0</string>
    <string name="lbl_hi">Hi, </string>
    <string name="lbl_1">1</string>
    <string name="lbl_add_to_cart">Add to cart</string>
    <string name="lbl_2">2</string>
    <string name="lbl_02">0%</string>
    <string name="lbl_3">3</string>
    <string name="lbl_300_packages">300 Packages</string>
    <string name="lbl_4">4</string>
    <string name="lbl_7">7%</string>
    <string name="lbl_payment_method">Payment method</string>
    <string name="lbl_private_account">Private Account</string>
    <string name="lbl_coptupha">COPTUPHA</string>
    <string name="msg_online_medical">Online medical &amp;
Healthcare</string>
    <string name="msg_2_items_in_your">2 Items in your cart</string>
    <string name="msg_your_order_will2">Your Order will be delivered with invoice </string>
    <string name="lbl_login">Login </string>
    <string name="lbl_checkout">Checkout</string>
    <string name="lbl_paypal">Paypal</string>
    <string name="msg_description">Description ....</string>
    <string name="msg_gripex_adulte_12">GRIPEX Adulte 12 Sachets</string>
    <string name="msg_we_know_that">We know that\u200a\u2014\u200afor children AND adults\u200a\u2014\u200alearning is most effective when it is</string>
    <string name="lbl_your_name">Your Name</string>
    <string name="lbl_28_80">- $28.80</string>
    <string name="lbl_mobile_number">Mobile Number</string>
    <string name="lbl_more">More</string>
    <string name="msg_the_future_of_p">The future of professional learning is immersive, communal experiences for </string>
    <string name="lbl_notification">Notification</string>
    <string name="lbl_50_packages">50 packages</string>
    <string name="lbl_welcome_back">Welcome Back!</string>
    <string name="msg_peer_learning_w">Peer learning works. By building robust personal learning communities both  </string>
    <string name="msg_technology_shou">Technology should serve, not drive, pedagogy. Schools often discuss </string>
    <string name="msg_the_verify_code">The verify code will expire in 00:59</string>
    <string name="lbl_sale">SALE</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_3s_pharma">3S PHARMA</string>
    <string name="msg_no_network_conn">No network connection</string>
    <string name="lbl_185_00">$185.00</string>
    <string name="msg_sign_up_with_em">Sign up with email</string>
    <string name="lbl_total2">TOTAL</string>
    <string name="lbl_2_d">2 D</string>
    <string name="lbl_216_12345678">(216) 12345678</string>
    <string name="msg_deals_of_the_da">Deals of the Day</string>
    <string name="lbl_300_d">300 D</string>
    <string name="msg_welcome_to_medt">Welcome to Medtech</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
