<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="start" android:id="@+id/linearCart"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_29pxh"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_14pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_14pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtYourcart"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_21pxh"
                    android:layout_weight="0.83"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/lbl_your_cart"
                    style="@style/txtOverpassbold16" tools:text="@string/lbl_your_cart"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:id="@+id/linearRow2itemsinyour"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txt2Itemsinyour"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.59" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/msg_2_items_in_your"
                style="@style/txtOverpassromanregular14_3" tools:text="@string/msg_2_items_in_your"/>
            <LinearLayout android:id="@+id/linearRowplus"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_3pxv"
                android:layout_marginStart="@dimen/_115pxh"
                android:layout_weight="0.41" android:layout_width="0dp" android:orientation="horizontal">
                <ImageView android:id="@+id/imagePlus"
                    android:layout_height="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_width="@dimen/_12pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_plus_12x12"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_plus_12x12"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAddmore"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_weight="0.84"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_add_more"
                    style="@style/txtOverpassromanregular14_2" tools:text="@string/lbl_add_more"/>
            </LinearLayout>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:gravity="center_horizontal"
            android:id="@+id/recyclerCart"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            itemSpace="@{@dimen/_32pxh}" tools:itemCount="2" tools:listitem="@layout/row_cart"/>
        <View android:background="@color/black_900_0c"
            android:id="@+id/lineLineFour"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_16pxv" android:layout_width="@dimen/_322pxh"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_gray_300_99_radius_6"
            android:drawableEnd="@drawable/img_close"
            android:drawablePadding="@dimen/_30pxh"
            android:drawableStart="@drawable/img_offer"
            android:ellipsize="end"
            android:hint="@string/msg_1_coupon_applie"
            android:id="@+id/etGroup3684" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_9pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:textColorHint="@color/green_602"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtPaymentSummary"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/lbl_payment_summary"
            style="@style/txtOverpasssemibold16" tools:text="@string/lbl_payment_summary"/>
        <LinearLayout android:id="@+id/linearRowordertotal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtOrderTotal"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_weight="0.56" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/lbl_order_total"
                style="@style/txtOverpassregular14" tools:text="@string/lbl_order_total"/>

            <TextView
                android:id="@+id/txtPriceTwo"
                style="@style/txtOverpassregular14_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_196pxh"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/lbl_228_80"
                tools:text="@string/lbl_228_80" />
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowitemsdiscount"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtItemsDiscount"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_weight="0.63" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/lbl_items_discount"
                style="@style/txtOverpassregular14" tools:text="@string/lbl_items_discount"/>

            <TextView
                android:id="@+id/txtPriceThree"
                style="@style/txtOverpassregular14_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/lbl_28_80"
                tools:text="@string/lbl_28_80" />
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowcoupondiscount"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtCouponDiscount"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_weight="0.69" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/lbl_coupon_discount"
                style="@style/txtOverpassregular14" tools:text="@string/lbl_coupon_discount"/>

            <TextView
                android:id="@+id/txtPriceFour"
                style="@style/txtOverpassregular14_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/lbl_15_80"
                tools:text="@string/lbl_15_80" />
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowshipping"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtShipping"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.66" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/lbl_shipping"
                style="@style/txtOverpassregular14" tools:text="@string/lbl_shipping"/>

            <TextView
                android:id="@+id/txtFree"
                style="@style/txtOverpassregular14_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_239pxh"
                android:layout_marginBottom="@dimen/_1pxv"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/lbl_free"
                tools:text="@string/lbl_free" />
        </LinearLayout>
        <View android:background="@color/black_900_0c"
            android:id="@+id/lineLineFive"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_16pxv" android:layout_width="@dimen/_322pxh"/>
        <LinearLayout android:id="@+id/linearRowtotal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:id="@+id/txtTotal"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_weight="0.37" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/lbl_total"
                style="@style/txtOverpassregular16" tools:text="@string/lbl_total"/>

            <TextView
                android:id="@+id/txtPriceFive"
                style="@style/txtOverpassbold16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@string/lbl_185_00"
                tools:text="@string/lbl_185_00" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnPlaceOrder185Zero"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_75pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_17pxv" android:singleLine="true"
            android:text="@string/msg_place_order_1"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/msg_place_order_1"/>
    </LinearLayout>
</layout>
